fix alignment in search form, fix text align on how cards, changes for popular destinations and add lonely planet modal

--- a/app/assets/stylesheets/components/_how-cards.scss
+++ b/app/assets/stylesheets/components/_how-cards.scss
@@ -11,12 +11,19 @@
 
 .panel {
   padding: 20px;
+  align-items: center;
   border-radius: 16px;
   background-color: white;
   box-shadow: $shadow;
+
   .panel-icon img{
     width: 25%;
   }
+  
+  .panel-main-content {
+    height: 60%;
+  }
+
 }
 
 @media(max-width: 992px){
